# Losange

./: .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  icons.toml  xyz.timtimtim.Losange.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  release.yml
build-aux/copr/: Losange.spec
build-aux/flatpak/: .gitignore  build.sh  xyz.timtimtim.Losange.json
data/: losange.sh  xyz.timtimtim.Losange.desktop  xyz.timtimtim.Losange.gschema.xml  xyz.timtimtim.Losange.metainfo.xml
flatpak/: build.sh
locales/: en.yml  fr.yml
nix/: devShell.nix  package.nix
src/: app.rs  constants.rs  main.rs  mpris.rs  server.rs  style.css
src/common/: format.rs  image.rs  language.rs  layout.rs  mod.rs  net.rs  style.rs  translate.rs  window.rs
src/components/: catalog_row.rs  dropdown.rs  header_menu.rs  item_box.rs  list.rs  mod.rs  spinner.rs
src/components/catalog_row/: button.rs  mod.rs
src/components/image/: init.rs  mod.rs
src/components/meta_item/: grid.rs  item.rs  mod.rs
src/dialogs/: about.rs  login.rs  mod.rs  preferences.rs  shortcuts.rs
src/pages/: mod.rs
src/pages/addon/: mod.rs
src/pages/addons/: addon_row.rs  mod.rs
src/pages/details/: mod.rs  tag.rs  tags.rs
src/pages/details/sidebar/: mod.rs  stream_row.rs  video_row.rs
src/pages/details/sidebar/list/: list_item.rs  mod.rs
src/pages/discover/: mod.rs
src/pages/home/: mod.rs
src/pages/player/: mod.rs  video.rs
src/pages/player/mpv/: imp.rs  mod.rs  properties.rs
src/pages/player/tracks_menu/: menu_option.rs  mod.rs
src/pages/search/: mod.rs
stremio-core-losange/: Cargo.toml
stremio-core-losange/src/: core.rs  emitter.rs  env.rs  fetch.rs  lib.rs  model.rs  storage.rs
stremio-core-losange/src/models/: addon_details.rs  ctx.rs  discover.rs  home.rs  installed_addons.rs  library.rs  meta_details.rs  mod.rs  player.rs  remote_addons.rs  search.rs  server.rs
stremio-core-losange/src/types/: addon.rs  catalog.rs  item.rs  mod.rs  stream.rs  video.rs
