[package]
name = "losange"
version = "0.5.0"
description = "A simple Stremio client"
authors = ["Tim Dusser-Jolly"]
repository = "https://github.com/tymmesyde/Losange"
license = "GPL-3.0-only"
edition = "2021"
publish = false

[workspace]
members = [
    "stremio-core-losange"
]

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
color-thief = "0.2.2"
epoxy = "0.1.0"
hsl = "0.1.1"
http-cache-reqwest = "0.15.1"
itertools = "0.14.0"
libc = "0.2.178"
libloading = "0.9.0"
libmpv2 = "5.0.2"
open = "5.3.2"
relm4 = { git = "https://github.com/Relm4/Relm4", features = ["libadwaita", "gnome_48"] }
relm4-icons = "0.10.0"
reqwest = { version = "0.12.15", features = ["rustls-tls", "http2", "json"] }
reqwest-middleware = "0.4.1"
rust-i18n = "3.1.4"
rust_iso639 = "0.0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.147"
shellexpand = "3.1.0"
stremio-core-losange = { version = "0.1.0", path = "./stremio-core-losange" }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.19"
url = "2.5.4"
xml = "0.8.20"

[build-dependencies]
relm4-icons-build = "0.10"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/losange", dest = "/usr/bin/", mode = "755" },
    { source = "data/icons/xyz.timtimtim.Losange.svg", dest = "/usr/share/icons/hicolor/scalable/apps/", mode = "644" },
    { source = "data/xyz.timtimtim.Losange.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "data/xyz.timtimtim.Losange.metainfo.xml", dest = "/usr/share/metainfo/", mode = "644" },
    { source = "data/xyz.timtimtim.Losange.gschema.xml", dest = "/usr/share/glib-2.0/schemas/", mode = "644" },
]

[package.metadata.generate-rpm.requires]
nodejs = ">= 10"

[package.metadata.deb]
assets = [
    ["target/release/losange", "/usr/bin/losange", "755"],
    ["data/icons/xyz.timtimtim.Losange.svg", "/usr/share/icons/hicolor/scalable/apps/", "644"],
    ["data/xyz.timtimtim.Losange.desktop", "/usr/share/applications/", "644"],
    ["data/xyz.timtimtim.Losange.metainfo.xml", "/usr/share/metainfo/", "644"],
    ["data/xyz.timtimtim.Losange.gschema.xml", "/usr/share/glib-2.0/schemas/", "644"],
]
