[package]
name = "losange"
version = "0.9.0"
description = "A simple Stremio client"
authors = ["Tim Dusser-Jolly"]
repository = "https://github.com/tymmesyde/Losange"
license = "GPL-3.0-only"
edition = "2021"
publish = false

[workspace]
members = [
    "stremio-core-losange"
]

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
color-thief = "0.2.2"
dashmap = "6.1.0"
epoxy = "0.1.0"
hex = "0.4.3"
hsl = "0.1.1"
http-cache-reqwest = "0.15.1"
image = "0.25.10"
itertools = "0.14.0"
libc = "0.2.183"
libloading = "0.9.0"
libmpv2 = "5.0.3"
mpris-server = "0.9.0"
open = "5.3.3"
relm4 = { version = "0.11.0", features = ["libadwaita", "gnome_49"] }
relm4-icons = "0.11.0"
reqwest = { version = "0.12.28", features = ["rustls-tls", "http2", "json"] }
reqwest-middleware = "0.4.2"
rust-i18n = "3.1.5"
rust_iso639 = "0.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.2"
stremio-core-losange = { version = "0.1.0", path = "./stremio-core-losange" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
xml = "1.2.1"

[build-dependencies]
relm4-icons-build = "0.10"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/losange", dest = "/usr/bin/", mode = "755" },
    { source = "data/icons/xyz.timtimtim.Losange.svg", dest = "/usr/share/icons/hicolor/scalable/apps/", mode = "644" },
    { source = "data/xyz.timtimtim.Losange.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "data/xyz.timtimtim.Losange.metainfo.xml", dest = "/usr/share/metainfo/", mode = "644" },
    { source = "data/xyz.timtimtim.Losange.gschema.xml", dest = "/usr/share/glib-2.0/schemas/", mode = "644" },
]

[package.metadata.generate-rpm.requires]
nodejs = ">= 10"

[package.metadata.deb]
assets = [
    ["target/release/losange", "/usr/bin/losange", "755"],
    ["data/icons/xyz.timtimtim.Losange.svg", "/usr/share/icons/hicolor/scalable/apps/", "644"],
    ["data/xyz.timtimtim.Losange.desktop", "/usr/share/applications/", "644"],
    ["data/xyz.timtimtim.Losange.metainfo.xml", "/usr/share/metainfo/", "644"],
    ["data/xyz.timtimtim.Losange.gschema.xml", "/usr/share/glib-2.0/schemas/", "644"],
]
