[package]
name = "stremio-core-losange"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
chrono = "0.4.38"
futures = "0.3.30"
getrandom = "0.2.15"
hex = "0.4.3"
http = "1.2"
http-cache-reqwest = "0.15.1"
hyper = "1.3.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
redb = "2.1.1"
relm4 = { git = "https://github.com/Relm4/Relm4" }
reqwest = { version = "0.12.14", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4.1"
serde = "1.0.203"
serde_json = "1.0.117"
serde_path_to_error = "0.1.16"
stremio-core = { git = "https://github.com/Stremio/stremio-core", rev = "cb9e69d", features = ["derive", "env-future-send"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.44"
url = "2.5.2"
